# resound

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
apps/desktop/: .gitignore  package.json  vite.config.ts
apps/desktop/src/: App.tsx  TrayApp.tsx  index.css  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  macos_aggregate.m  macos_audio.rs
apps/desktop/src/components/: DriverSetupFlow.tsx
apps/desktop/src/hooks/: useAudioHost.ts  useAudioReceiver.ts
apps/landing/: package.json  tsconfig.tsbuildinfo
apps/landing/src/app/: globals.css  layout.tsx  page.tsx
apps/landing/src/components/: CosmicBackground.tsx  Hero.tsx
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/audio/: WebAudioController.ts  engine.ts  processor.ts
apps/web/src/hooks/: useReceiver.ts  useWebReceiver.ts
src/: App.tsx  TrayApp.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  macos_aggregate.m  macos_audio.rs
src/hooks/: useAudioHost.ts  useAudioReceiver.ts
src/types/: index.ts
