[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# mDNS discovery/advertising
mdns-sd = "0.18.2"
local-ip-address = "0.6.10"

# Rust 1.87 MSRV compatibility:
# Tauri currently pulls `serde_with` v3.18.0 which requires Rust >=1.88.
# Pin to an older version that works with Rust 1.87.
serde_with = "=3.17.0"
time = "=0.3.45"

# WebSocket signaling relay
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
axum = { version = "0.7.9", features = ["ws"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.32"

# Audio capture
cpal = "0.15"


